# Gujrati-Healthcare-SLM

./: .env.example  .gitignore  01_setup_baseline.ipynb  02_data_collection_cleaning.ipynb  04_dataset_creation.ipynb  05_qlora_finetune.ipynb  08_rag_pipeline.ipynb  09_evaluation.ipynb  10_streamlit_app.py  Modelfile  README.md  benchmark.py  benchmark_base.py  diagnose_rag.py  docker-compose.yml  low_ram_merge.py  main.py  merge_lora.py  pyproject.toml  reingest_docs.py  requirements.txt  side_by_side_test.py  test_rag.py
app/: streamlit_app.py
notebooks/: 01_setup_baseline.ipynb  02_data_collection_cleaning.ipynb  03_knowledge_graph.ipynb  04_dataset_creation.ipynb  05_qlora_finetune.ipynb  06_eval_comparison.ipynb  06_vector_db.ipynb  07_retrieval_system.ipynb  08_rag_pipeline.ipynb  09_evaluation.ipynb
outputs/: baseline_report.csv  baseline_results.json
src/: config.py
src/cache/: redis_client.py
src/kg/: entity_extractor.py  neo4j_client.py
src/pipeline/: inference.py
src/retriever/: graph_rag.py
src/utils/: text_utils.py
src/vectordb/: chroma_client.py
