[project]
name = "gujrati-healthcare-slm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.29.0",
    "bitsandbytes>=0.43.0",
    "chromadb>=0.5.0",
    "datasets>=2.19.0",
    "evaluate>=0.4.0",
    "indic-nlp-library>=0.91",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "matplotlib>=3.8.0",
    "networkx>=3.3",
    "numpy>=1.26.0",
    "opustools>=1.6.0",
    "pandas>=2.2.0",
    "peft>=0.10.0",
    "python-dotenv>=1.0.0",
    "regex>=2024.4.16",
    "requests>=2.31.0",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.4.0",
    "scikit-learn>=1.4.0",
    "sentence-transformers>=3.0.0",
    "sentencepiece>=0.2.0",
    "streamlit>=1.35.0",
    "torch>=2.1.0",
    "tqdm>=4.66.0",
    "transformers>=4.40.0",
    "trl>=0.8.0",
    "unicodedata2>=15.0.0",
]
